--- a/frontend/gnosity/src/components/style/card.css
+++ b/frontend/gnosity/src/components/style/card.css
@@ -1,18 +1,19 @@
 .card {
     width: 50vh;
-    height: 50vh;
+    min-height: 10vh;
     display: flex;
     flex-direction: column;
     /*stacks children vertically*/
     background-image: linear-gradient(to bottom right, #403D8E, #9F94D5);
     border-radius: 30px;
     margin: 40px auto;
+    padding: 20px;
 }
 
 .title {
     display: flex;
     justify-content: center;
-    font-size: 8vw;
+    font-size: 4vw;
     font-family: "Macondo Swash Caps", cursive;
     color: #EBCB85;
     text-shadow: 0 0 4px #ece1c9,
