--- a/frontend/gnosity/src/components/style/signup.css
+++ b/frontend/gnosity/src/components/style/signup.css
@@ -81,3 +81,9 @@
     cursor: pointer;
     font-family: 'JetBrainsMono', monospace;
 }
+
+.card {
+    min-height: 474px;
+    min-width: 474px;
+
+}
