--- a/frontend/gnosity/src/components/style/signup.css
+++ b/frontend/gnosity/src/components/style/signup.css
@@ -59,6 +59,8 @@
 .forgot-password span {
     color: #EBCB85;
     cursor: pointer;
+    text-decoration: underline;
+    text-underline-offset: 5px;
 }
 
 .submit-container {
