--- a/frontend/gnosity/src/components/style/questCard.css
+++ b/frontend/gnosity/src/components/style/questCard.css
@@ -55,3 +55,37 @@
   padding: 5px 10px;
   margin-right: 6px;
 }
+
+.btn-remove {
+  border: none;
+  border-radius: 8px;
+  padding: 5px 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  display: block;
+  width: 160px;
+  font-weight: 700;
+  font-size: 20px;
+  color: #403d8e;
+  background-image: linear-gradient(to bottom right, #EBCB85, #EBE7DF);
+}
+
+.btn-complete {
+  border: none;
+  border-radius: 8px;
+  padding: 5px 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  display: block;
+  width: 160px;
+  font-weight: 700;
+  font-size: 20px;
+  color: #403d8e;
+  background-image: linear-gradient(to bottom right, #EBCB85, #EBE7DF);
+}
+
+.buttonsquest {
+  display: flex;
+  gap: 10px;
+  padding-top: 10px;
+}
